Justifier le texte du pied de page sur toute la largeur

--- a/templates/paiements/document_unifie_a5_complet.html
+++ b/templates/paiements/document_unifie_a5_complet.html
@@ -227,7 +227,7 @@
         /* Pied de page */
         .footer {
             margin-top: auto;
-            text-align: left;
+            text-align: justify;
             font-size: 6px;
             color: #000;
             border-top: 1px solid #000;
@@ -238,34 +238,35 @@
             bottom: 0;
             left: 3mm;
             right: 3mm;
+            line-height: 1.2;
         }
         
         .footer-company {
             font-weight: 900;
             margin-bottom: 1mm;
             color: #000;
-            text-align: left;
+            text-align: justify;
         }
         
         .footer-address {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: justify;
         }
         
         .footer-contact {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: justify;
         }
         
         .footer-legal {
             font-size: 5px;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: justify;
         }
         
         .footer-generation {
@@ -273,7 +274,7 @@
             font-style: italic;
             color: #000;
             font-weight: bold;
-            text-align: left;
+            text-align: justify;
         }
         
         /* Espace pour cachet et signature */
