--- a/templates/paiements/document_unifie_a5_complet.html
+++ b/templates/paiements/document_unifie_a5_complet.html
@@ -236,9 +236,13 @@
             font-weight: bold;
             position: absolute;
             bottom: 0;
-            left: 3mm;
-            right: 3mm;
+            left: 0;
+            right: 0;
             line-height: 1.2;
+            padding-left: 3mm;
+            padding-right: 3mm;
+            word-spacing: 0.5em;
+            letter-spacing: 0.1em;
         }
         
         .footer-company {
@@ -246,6 +250,7 @@
             margin-bottom: 1mm;
             color: #000;
             text-align: justify;
+            white-space: nowrap;
         }
         
         .footer-address {
@@ -253,6 +258,7 @@
             color: #000;
             font-weight: bold;
             text-align: justify;
+            white-space: nowrap;
         }
         
         .footer-contact {
@@ -260,6 +266,7 @@
             color: #000;
             font-weight: bold;
             text-align: justify;
+            white-space: nowrap;
         }
         
         .footer-legal {
@@ -267,6 +274,7 @@
             color: #000;
             font-weight: bold;
             text-align: justify;
+            white-space: nowrap;
         }
         
         .footer-generation {
@@ -275,6 +283,7 @@
             color: #000;
             font-weight: bold;
             text-align: justify;
+            white-space: nowrap;
         }
         
         /* Espace pour cachet et signature */
