--- a/templates/paiements/document_unifie_a5_complet.html
+++ b/templates/paiements/document_unifie_a5_complet.html
@@ -227,7 +227,7 @@
         /* Pied de page */
         .footer {
             margin-top: auto;
-            text-align: justify;
+            text-align: center;
             font-size: 6px;
             color: #000;
             border-top: 1px solid #000;
@@ -241,40 +241,34 @@
             line-height: 1.2;
             padding-left: 3mm;
             padding-right: 3mm;
-            word-spacing: 0.5em;
-            letter-spacing: 0.1em;
         }
         
         .footer-company {
             font-weight: 900;
             margin-bottom: 1mm;
             color: #000;
-            text-align: justify;
-            white-space: nowrap;
+            text-align: center;
         }
         
         .footer-address {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
-            text-align: justify;
-            white-space: nowrap;
+            text-align: center;
         }
         
         .footer-contact {
             margin-bottom: 1mm;
             color: #000;
             font-weight: bold;
-            text-align: justify;
-            white-space: nowrap;
+            text-align: center;
         }
         
         .footer-legal {
             font-size: 5px;
             color: #000;
             font-weight: bold;
-            text-align: justify;
-            white-space: nowrap;
+            text-align: center;
         }
         
         .footer-generation {
@@ -282,8 +276,7 @@
             font-style: italic;
             color: #000;
             font-weight: bold;
-            text-align: justify;
-            white-space: nowrap;
+            text-align: center;
         }
         
         /* Espace pour cachet et signature */
