Corriger l'affichage du champ Quartier dans le formulaire d'ajout de propriÃ©tÃ©

--- a/templates/proprietes/propriete_form.html
+++ b/templates/proprietes/propriete_form.html
@@ -198,13 +198,16 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             {{ form.code_postal|as_crispy_field }}
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             {{ form.ville|as_crispy_field }}
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
+                            {{ form.quartier|as_crispy_field }}
+                        </div>
+                        <div class="col-md-3">
                             {{ form.pays|as_crispy_field }}
                         </div>
                     </div>
