--- a/templates/contrats/liste_contrats_caution.html
+++ b/templates/contrats/liste_contrats_caution.html
@@ -201,6 +201,10 @@
                                             <i class="bi bi-printer"></i>
                                         </a>
                                     {% endif %}
+                                    <a href="{% url 'paiements:historique:historique_contrat' contrat.id %}" 
+                                       class="btn btn-outline-info" title="Historique des paiements">
+                                        <i class="bi bi-history"></i>
+                                    </a>
                                 </div>
                             </td>
                         </tr>
