--- a/templates/proprietes/locataires_liste.html
+++ b/templates/proprietes/locataires_liste.html
@@ -58,6 +58,9 @@
                                         <a href="{% url 'proprietes:detail_locataire' locataire.pk %}" class="btn btn-outline-primary" title="Voir">
                                             <i class="bi bi-eye"></i>
                                         </a>
+                                        <a href="{% url 'paiements:historique:historique_locataire' locataire.pk %}" class="btn btn-outline-info" title="Historique des paiements">
+                                            <i class="bi bi-history"></i>
+                                        </a>
                                         <a href="{% url 'proprietes:modifier_locataire' locataire.pk %}" class="btn btn-outline-warning" title="Modifier">
                                             <i class="bi bi-pencil"></i>
                                         </a>
