Feature: Ajout du nom utilisateur sur tous les documents PDF générés
- ContratPDFService: Ajout du paramètre user et affichage dans les signatures
- RecuCautionPDFService: Ajout du paramètre user et affichage dans les signatures
- ServiceGenerationRetraitPDF: Ajout du paramètre user et affichage dans le template
- RecapMensuel.generer_pdf_recapitulatif: Ajout du paramètre user au contexte
- Paiement.generer_quittance_kbis_dynamique: Ajout du paramètre user
- DocumentUnifieA5ServiceComplet: Ajout du paramètre user et affichage dans le template
- Modification de toutes les vues pour passer request.user aux services
- Template document_unifie_a5_complet.html: Ajout du nom utilisateur dans le pied de page
- Tests de validation réussis pour tous les services
- Le nom de l'utilisateur qui génère le document est maintenant affiché sur tous les PDF

--- a/templates/paiements/document_unifie_a5_complet.html
+++ b/templates/paiements/document_unifie_a5_complet.html
@@ -599,6 +599,9 @@
             <div class="footer-generation">
                 Ce document est généré automatiquement par le système {{ config_entreprise.nom_entreprise }}<br>
                 {{ document_title }} émis le {{ generation_date|date:"d/m/Y à H:i" }}<br>
+                {% if user %}
+                <strong>Généré par : {{ user.get_full_name|default:user.username }}</strong><br>
+                {% endif %}
                 <strong>Type de paiement : {{ type_paiement }}</strong>
             </div>
         </div>
