--- a/templates/proprietes/detail.html
+++ b/templates/proprietes/detail.html
@@ -176,7 +176,7 @@
                                         <td>
                                             <div class="btn-group btn-group-sm">
                                                 <a href="{% url 'proprietes:deduction_charge_bailleur' charge.pk %}" 
-                                                   class="btn btn-outline-primary" title="Déduire du loyer">
+                                                   class="btn btn-outline-primary" title="Déduire du retrait">
                                                     <i class="bi bi-calculator"></i>
                                                 </a>
                                                 <a href="{% url 'proprietes:detail_charge_bailleur' charge.pk %}" 
